flex gap removed and replaced by lobotomized owl (fix for safari) :globe_with_meridians:

--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -119,9 +119,12 @@ footer {
     }
     a {
       display: flex;
-      gap: 12px;
       padding: 5px 0;
       color: white;
+      // gap: 12px;
+      > * + * {
+        margin-left: 12px;
+      }
     }
   }
 }
