--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -29,13 +29,19 @@ main {
   transform: translateY(-5%);
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  // gap: 30px;
+  > * + * {
+    margin-top: 30px;
+  }
 
   .restaurant__title--container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 30px;
+    // gap: 30px;
+    > * + * {
+      margin-left: 30px;
+    }
 
     .restaurant__title {
       font-family: globals.$font-title;
@@ -56,7 +62,10 @@ main {
   .restaurant__menu {
     @include globals.flex-column-center();
     align-items: flex-start;
-    gap: 20px;
+    // gap: 20px;
+    > * + * {
+      margin-top: 20px;
+    }
     padding-bottom: 15px;
     &--title {
       text-transform: uppercase;
@@ -77,7 +86,10 @@ main {
       width: 100%;
       @include globals.flex-column-center();
       align-items: flex-start;
-      gap: 15px;
+      // gap: 15px;
+      > * + * {
+        margin-top: 15px;
+      }
     }
     &--item {
       height: 70px;
