--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,7 +14,10 @@
   animation: 300ms disappear 2500ms forwards;
   @include globals.flex-column-center();
   justify-content: center;
-  gap: 10px;
+  // gap: 10px;
+  > * + * {
+    margin-top: 10px;
+  }
   @keyframes disappear {
     to {
       opacity: 0;
@@ -36,7 +39,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    // gap: 10px;
+    > * + * {
+      margin-left: 10px;
+    }
   }
   &__circle {
     height: 95px;
@@ -48,6 +54,7 @@
     background-color: globals.$turquoise-primary;
     transform: scale(0);
     animation: appear 750ms forwards ease-in;
+    // animation: name duration timing-function delay iteration-count direction fill-mode;
     &:nth-child(2) {
       background-color: globals.$purple-primary;
       animation-delay: 350ms;
@@ -88,9 +95,12 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 20px;
     background-color: lightgray;
     padding: 15px;
+    // gap: 20px;
+    > * + * {
+      margin-left: 20px;
+    }
     &:hover {
       cursor: text;
     }
@@ -101,13 +111,16 @@ header {
 //                                  HERO
 //////////////////////////////////////////////////////////////////////////////
 .hero {
-  height: 270px;
+  height: 290px;
   min-height: 240px;
   @include globals.flex-column-center();
   justify-content: space-evenly;
-  gap: 30px;
   background-color: #efefef;
   padding: 40px 0 60px;
+  // gap: 30px;
+  > * + * {
+    margin-top: 30px;
+  }
 
   &__text--container {
     height: 100%;
@@ -122,6 +135,9 @@ header {
     font-size: 1.2rem;
     font-weight: 300;
   }
+  &__btn {
+    height: 100px;
+  }
 }
 
 //////////////////////////////////////////////////////////////////////////////
@@ -134,16 +150,20 @@ header {
   @include globals.flex-column-center();
   align-items: flex-start;
   justify-content: space-evenly;
-  gap: 30px;
+  // gap: 30px;
+  > * + * {
+    margin-top: 30px;
+  }
 
   &__info {
     height: 100%;
     width: 100%;
     @include globals.flex-column-center();
     justify-content: space-evenly;
-    // padding-left: 12.5px;
-    // border: 1px solid red;
-    gap: 20px;
+    // gap: 20px;
+    > * + * {
+      margin-top: 20px;
+    }
     &--item {
       width: 100%;
       min-width: 280px;
@@ -161,8 +181,11 @@ header {
         width: 100%;
         display: flex;
         align-items: center;
-        gap: 25px;
         padding-left: 10px;
+        // gap: 25px;
+        > * + * {
+          margin-left: 25px;
+        }
         i {
           font-size: 1.5rem;
           color: dimgrey;
@@ -212,12 +235,18 @@ header {
   //   border: 1px solid red;
   @include globals.flex-column-center();
   align-items: flex-start;
-  gap: 20px;
+  // gap: 20px;
+  > * + * {
+    margin-top: 20px;
+  }
   &__cards--container {
     height: 100%;
     width: 100%;
     @include globals.flex-column-center();
-    gap: 20px;
+    // gap: 20px;
+    > * + * {
+      margin-top: 20px;
+    }
   }
   &__card {
     width: 100%;
